# dapl

./: 0001-dapltest-dapltest-with-no-argument-not-working-in-pp.patch  Makefile  README.md  dapl-2.0.25-dat_ia_open_hang.patch  dapl-2.0.34-compile.patch  dapl-2.0.34-mlx5.patch  dapl-2.0.34-strerror_include.patch  dapl.spec
src/: ChangeLog  Makefile.am  Makefile.in  README  README.mcm  aclocal.m4  config.h.in  configure  configure.in  dapl.spec  dapl.spec.in
src/dapl/common/: dapl_adapter_util.h  dapl_cr_callback.c  dapl_debug.c  dapl_ep_connect.c  dapl_ep_create.c  dapl_ep_free.c  dapl_ep_modify.c  dapl_ep_util.c  dapl_evd_connection_callb.c  dapl_evd_util.c  dapl_evd_util.h  dapl_ia_open.c  dapl_ia_query.c  dapl_ia_util.c  dapl_rsp_create.c  dapl_sp_util.c  dapl_srq_set_lw.c
src/dapl/include/: dapl.h  dapl_debug.h
src/dapl/openib_cma/: cm.c  dapl_ib_util.h  device.c
src/dapl/openib_common/: cq.c  dapl_ib_common.h  dapl_ib_dto.h  dapl_mic_common.h  ib_extensions.c  mem.c  qp.c  util.c
src/dapl/openib_mcm/: cm.c  dapl_ib_util.h  device.c  mix.c  proxy.c
src/dapl/openib_scm/: cm.c  dapl_ib_util.h  device.c
src/dapl/openib_ucm/: cm.c  dapl_ib_util.h  device.c
src/dapl/svc/: mcm.c  mix.c  mpxy_in.c  mpxy_out.c  mpxyd.c  mpxyd.h  util.c
src/dapl/udapl/: dapl_init.c  dapl_lmr_create.c
src/dapl/udapl/linux/: dapl_osd.h
src/dat/common/: dat_api.c
src/doc/: dat.conf  mpxyd.conf
src/test/dapltest/: Makefile.in
src/test/dapltest/cmd/: dapl_limit_cmd.c  dapl_params.c
src/test/dapltest/include/: dapl_common.h
src/test/dapltest/test/: dapl_transaction_test.c
src/test/dtest/: Makefile.in  dtest.c  dtestsrq.c  dtestx.c
